# hubbub

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: minimal.rs
src/: client.rs  context.rs  error.rs  lib.rs  prelude.rs  types.rs  websocket.rs
src/types/: activity.rs  channel.rs  common.rs  gateway.rs  guild.rs  message.rs  poll.rs  presence.rs  role.rs  snowflake.rs  sticker.rs  timestamp.rs  user.rs  vendor.rs
