[package]
name = "hubbub"
version = "0.9.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Discord self-bot library for rust"
keywords = [ "discord", "self", "bot" ]
authors = [ "github:zxcv05" ]
repository = "https://github.com/zxcv05/hubbub"

[dependencies]
anyhow = "1.0.86"
async-timer = { version = "0.7.4", features = ["tokio"] }
async-trait = "0.1.80"
chrono = "0.4.38"
dyn-clone = "1.0.17"
futures-util = "0.3.30"
http = "1.1.0"
log = "0.4.21"
prost = "0.12.6"
prost-types = "0.12.6"
reqwest = "0.12.4"
reqwest-websocket = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["tokio-macros", "macros", "rt-multi-thread", "net", "fs", "io-std", "time"] }

[build-dependencies]
prost-build = "0.12.6"

